syntax = "proto3";

package user;

service UserService {
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse) {}
}

message ValidateUserRequest {
  string email = 1;
}

message ValidateUserResponse {
  bool is_valid = 1;
  string id = 2;
  string name = 3;
}